FEAT: spend amount

--- a/financial-manager/public/index.hbs
+++ b/financial-manager/public/index.hbs
@@ -81,6 +81,12 @@
             {{/each}}
           </table>
         </div>
+
+        <div class="table">
+          <h2>Para Gastar</h2>
+
+          <p>{{spendAmount}}</p>
+        </div>
       </div>
     </div>
   </body>
